--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,12 @@
 @import "~bootstrap";
+
+#root {
+  height: 80vh;
+}
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
